--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
     <script>
       window.$docsify = {
         name: "Web3 Resources",
+        subMaxLevel: 3,
+        search: "auto",
+        search: {
+          maxAge: 86400000,
+          paths: "auto",
+          placeholder: "Type to search",
+          noData: "No Results!",
+          // Headline depth, 1 - 6
+          depth: 6,
+          hideOtherSidebarContent: false, // whether or not to hide other sidebar content
+        },
       };
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
+    <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
   </body>
 </html>
