--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         search: {
           maxAge: 86400000,
           paths: "auto",
-          placeholder: "Type to search",
-          noData: "No Results!",
-          // Headline depth, 1 - 6
+          placeholder: "Search",
+          noData: "No Results found!",
           depth: 6,
-          hideOtherSidebarContent: false, // whether or not to hide other sidebar content
+          hideOtherSidebarContent: false,
         },
       };
     </script>
