--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/free-Web3-resources/images/favicon_io/favicon.ico"
+      href="./images/favicon_io/favicon.ico"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Free resources to learn Web3" />
