--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -1212,6 +1212,7 @@
                               rel="noopener">Austin Griffith</a></li>
                         <li><a href="https://www.youtube.com/c/BlockExplorerMedia/videos" target="_blank" rel="noopener">Block
                               Explorer</a></li>
+                        <li><a href="https://www.youtube.com/c/WEB3Foundation" target="_blank" rel="noopener">Web3 Foundation</a></li>
                      </ul>
                   </article>
                </section>
