Update FREE Web3 Resources (2).html

--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -48,8 +48,8 @@
       }
 
       .search input:focus {
-         box-shadow: 0 0 5px var(--theme-color, #FFFFF);
-         border: 1px solid var(--theme-color, #FFFFF);
+         box-shadow: 0 0 5px var(--theme-color, #FFFFFF);
+         border: 1px solid var(--theme-color, #FFFFFF);
       }
 
       .search input::-webkit-search-decoration,
