I added a free polygon bootcamp

--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -550,6 +550,8 @@
                      <h2 id="getting-involved"><a href="https://francescoxx.github.io/free-Web3-resources/#/?id=getting-involved"
                            data-id="getting-involved" class="anchor"><span>Getting Involved</span></a></h2>
                      <ul>
+                        <li><a href="https://f1v3ff69.r.us-east-1.awstrack.me/L0/https:%2F%2Fbit.ly%2FI4GPolygon/2/0100018380841b67-210d9f1e-954e-429a-9997-ecfde761cd46-000000/cP3agOiljqmOo6g0LlLLYprbxX0=289"
+                              target="_blank" rel="noopener">Polygon Bootcamp</a> free polygon bootcamp 2022, registration ends 19th december 2022                        </li>
                         <li><a href="https://medium.com/certik/the-blockchain-trilemma-decentralized-scalable-and-secure-e9d8c41a87b3"
                               target="_blank" rel="noopener">Blockchain Trilemma</a> An article about the Blockchain Trilemma.
                         </li>
