Removed type from stylesheet and

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     rel="stylesheet"
     href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
     title="docsify-darklight-theme"
-    type="text/css"
   >
   </head>
   <body>
@@ -42,8 +41,7 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
     <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
     <script 
-    src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
-    type="text/javascript">
+    src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js">
   </script>
   </body>
 </html>
