--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>FREE Web3 Resources</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Free resources to learn Web3">
     <meta
       name="viewport"
