--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -17,8 +17,8 @@
 
    <!----------- Twitter Open Graph Tags ------------>
    <meta name="twitter:title" content="Free resources to learn Web3">
-   <meta name="twitter:description" content="This is a list of Free Web3 Resources links to learn Blockchain development."/>
-   <meta name="twitter:card" content="summary" />
+   <meta name="twitter:description" content="This is a list of Free Web3 Resources links to learn Blockchain development.">
+   <meta name="twitter:card" content="summary">
    <meta name="twitter:url" content="https://francescoxx.github.io/free-Web3-resources">
    <meta name="twitter:image" content="./assets/fb-twitter-banner.png">
 
