Removed ,chrome=1 (error)

--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -4,7 +4,7 @@
 
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="description" content="Free resources to learn Web3">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
