malformed comment improved

--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -8,14 +8,14 @@
    <meta name="description" content="Free resources to learn Web3">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-   <!---------- Facebook Open Graph Tags ---------->
+   <!-- Facebook Open Graph Tags-->
    <meta property="og:title" content="Free resources to learn Web3" >
    <meta property="og:description" content="This is a list of Free Web3 Resources links to learn Blockchain development.">
    <meta property=”og:type” content=”website”>
    <meta property="og:url" content="https://francescoxx.github.io/free-Web3-resources">
    <meta property="og:image" content="./assets/fb-twitter-banner.png">
 
-   <!----------- Twitter Open Graph Tags ------------>
+   <!--Twitter Open Graph Tags-->
    <meta name="twitter:title" content="Free resources to learn Web3">
    <meta name="twitter:description" content="This is a list of Free Web3 Resources links to learn Blockchain development.">
    <meta name="twitter:card" content="summary">
