--- a/FREE Web3 Resources (2).html
+++ b/FREE Web3 Resources (2).html
@@ -22,7 +22,7 @@
    <meta name="twitter:url" content="https://francescoxx.github.io/free-Web3-resources">
    <meta name="twitter:image" content="./assets/fb-twitter-banner.png">
 
-   <title>FREE Web3 Resources</title>z
+   <title>FREE Web3 Resources</title>
    <link rel="icon" type="image/x-icon" href="https://francescoxx.github.io/images/favicon_io/favicon.ico">
 
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
