--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>FREE Web3 Resources</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Free resources to learn Web3" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Free resources to learn Web3">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
-    />
+    >
     <link 
     rel="stylesheet"
     href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
     title="docsify-darklight-theme"
-    type="text/css"
-  />
+  >
   </head>
   <body>
     <div id="app"></div>
@@ -42,8 +41,7 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
     <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
     <script 
-    src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
-    type="text/javascript">
+    src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js">
   </script>
   </body>
 </html>
