--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>FREE Web3 Resources</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Free resources to learn Web3">
     <meta
